[package]
name = "claudeV"
version = "0.1.0"
edition = "2021"
description = "claudeV — VCD Waveform Viewer"

[[bin]]
name = "claudeV"
path = "src/main.rs"

[dependencies]
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }
# Transparent decompression of `.zst`-compressed VCD / XTrace dumps.
zstd = "0.13"

[profile.release]
opt-level = 3
lto = true
strip = true
